# Target-Capital-Engine

./: .replit  pyproject.toml  replit.md
artifacts/api-server/: nixpacks.toml  railpack.json  railway.toml
artifacts/api-server/src/: app.ts
artifacts/api-server/src/routes/: exec-proxy.ts
artifacts/tc-execution-engine/: .env.example  .gitignore  .railwayignore  Procfile  main.py  nixpacks.toml  railpack.json  railway.toml  requirements.txt
artifacts/tc-execution-engine/app/: main.py
artifacts/tc-execution-engine/app/middleware/: hmac_auth.py  idempotency.py
artifacts/tc-execution-engine/app/routers/: admin.py  health.py  orders.py
artifacts/tc-execution-engine/app/static/: index.html
artifacts/tc-execution-engine/docs/: architecture.md
artifacts/tc-execution-engine/scripts/: check_test_data.py  deploy_ec2.sh  init_schema.py  seed_test_data.py
artifacts/tc-execution-engine/shared/: crypto.py  db.py  models.py  schemas.py
artifacts/tc-execution-engine/shared/brokers/: __init__.py  aliceblue.py  angel.py  base.py  dhan.py  stubs.py  zerodha.py
artifacts/tc-execution-engine/tests/: smoke.sh  test_safety_changes.py
attached_assets/: Pasted--27-tc-execution-engine-new-app-build-What-Why-Build-a-_1779009134025.txt  Pasted--File-opt-venv-lib-python3-11-site-packages-sqlal-17796_1779644031753.txt  Pasted--File-opt-venv-lib-python3-11-site-packages-sqlalchemy-_1779645322149.txt  Pasted--Nixpacks-v1-41-0-setup-pyt-1779642695866_1779642695867.txt  Pasted-History-Hide-Skipped-Target-Capital-Engine--17796448627_1779644862716.txt
