[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cachetools==5.5.0",
    "cryptography==43.0.3",
    "dhanhq==2.0.1",
    "fastapi==0.115.5",
    "gunicorn==23.0.0",
    "httpx==0.28.0",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.32.1",
]
